# ml_research_papers

./: .gitignore  FINDINGS.md  README.md  pyproject.toml
papers/dropout/: README.md
papers/dropout/src/: dropout.py  experiment.py  my_dropout.py  my_network.py
papers/forgetting_transformer/: .gitignore  FINDINGS.md  README.md  requirements.txt
papers/forgetting_transformer/notebooks/: 01_forgetting_attention_implementation.ipynb
papers/forgetting_transformer/results/: evaluation_results.json
papers/forgetting_transformer/results/large_scale/: all_experiments.json  experiment_1_wikitext.json  experiment_2_memory.json  experiment_3_scaling.json  experiment_4_extrapolation.json
papers/forgetting_transformer/src/: __init__.py  evaluate.py  forgetting_attention.py  large_scale_experiments.py  recurrent_attention.py  standard_attention.py  transformer_blocks.py  verify_claims.py
papers/seq2seq_attention/: .gitignore  README.md  train.py
papers/seq2seq_attention/models/: __init__.py  attention.py  decoder.py  encoder.py  seq2seq.py
